# openapi.yaml
@@ -356,6 +356,8 @@ paths:
     get:
       description: Gets information about an environment.
       operationId: singleEnvironment
+      parameters:
+      - $ref: '#/components/parameters/environmentId'
       responses:
         "200":
           content:
@@ -446,8 +448,6 @@ paths:
       summary: Get an environment
       tags:
       - Environments
-    parameters:
-    - $ref: '#/components/parameters/environmentId'
     put:
       description: Updates an environment.
       operationId: updateEnvironment
